--- a/src/components/get-started/appsco-tutorial-company-branding.html
+++ b/src/components/get-started/appsco-tutorial-company-branding.html
@@ -7,7 +7,7 @@
 <script src="../../../bower_components/popper.js/dist/umd/popper.js"></script>
 <script src="../../../bower_components/popper.js/dist/umd/popper-utils.js"></script>
 
-<dom-module id="appsco-tutorial-company-settings">
+<dom-module id="appsco-tutorial-company-branding">
     <template>
         <style>
             :host {
@@ -50,7 +50,7 @@
         </div>
 
         <div id="step-3" class="step" hidden>
-            <p>Adjust your main company information here.</p>
+            <p>Adjust your company branding here.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -60,7 +60,7 @@
         </div>
 
         <div id="step-4" class="step" hidden>
-            <p>If everything looks neat to you, hit save.</p>
+            <p>If you are done with the changes, hit save.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -70,7 +70,7 @@
         </div>
 
         <div id="step-5" class="step" hidden>
-            <p>Your company profile is now set up, <br>
+            <p>Your company branding is now set up, <br>
                 to continue with Getting started tutorial, <br>
                 open the company menu.
             </p>
@@ -85,7 +85,7 @@
     <script>
         Polymer({
 
-            is: 'appsco-tutorial-company-settings',
+            is: 'appsco-tutorial-company-branding',
 
             property: {
                 page: {
@@ -110,7 +110,7 @@
             },
 
             attached: function() {
-                this.name = 'company-settings';
+                this.name = 'company-branding';
                 this.init();
             },
 
@@ -131,15 +131,15 @@
                         }
                     },
                     step3: {
-                        reference: '* /deep/ #companySettingsCardBtn',
-                        coverTarget: '* /deep/ #companySettingsCard',
+                        reference: '* /deep/ #companySettingsBrandingCardBtn',
+                        coverTarget: '* /deep/ #companySettingsBrandingCard',
                         popperOptions: {
                             placement: 'bottom'
                         }
                     },
                     step4: {
-                        reference: '* /deep/ #companySettingsSaveBtn',
-                        coverTarget: '* /deep/ #companySettingsSettings',
+                        reference: '* /deep/ #companyBrandSettingsSaveBtn',
+                        coverTarget: '* /deep/ #companyBrandSettings',
                         popperOptions: {
                             placement: 'left-start'
                         }
