--- a/src/components/get-started/appsco-tutorial-company-branding.html
+++ b/src/components/get-started/appsco-tutorial-company-branding.html
@@ -110,7 +110,11 @@
             },
 
             attached: function() {
-                this.name = 'company-branding';
+                this.tutorialId = 'company-branding';
+                this.tutorialTitle = 'Company branding';
+                this.description = ' Upload logo and set company branding';
+                this.icon = 'icons:settings';
+                this.readme = '';
                 this.init();
             },
 
