--- a/src/components/get-started/appsco-tutorial-progress.html
+++ b/src/components/get-started/appsco-tutorial-progress.html
@@ -116,7 +116,7 @@
                 for(id in tutorials) {
                     if(tutorials.hasOwnProperty(id)) {
                         list.push({
-                            name: tutorials[id].getName(),
+                            name: tutorials[id].getId(),
                             done: tutorials[id].isDone()
                         });
                     }
