--- a/src/components/get-started/appsco-tutorial-branded-login.html
+++ b/src/components/get-started/appsco-tutorial-branded-login.html
@@ -7,7 +7,7 @@
 <script src="../../../bower_components/popper.js/dist/umd/popper.js"></script>
 <script src="../../../bower_components/popper.js/dist/umd/popper-utils.js"></script>
 
-<dom-module id="appsco-tutorial-company-branding">
+<dom-module id="appsco-tutorial-branded-login">
     <template>
         <style>
             :host {
@@ -40,7 +40,7 @@
         </div>
 
         <div id="step-2" class="step" hidden>
-            <p>You can find the company settings here.</p>
+            <p>You can find the branded login options in company settings..</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -50,7 +50,8 @@
         </div>
 
         <div id="step-3" class="step" hidden>
-            <p>Adjust your company branding here.</p>
+            <p>To customize login form for your company<br />
+                and add your own branding go here.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -59,7 +60,7 @@
             </div>
         </div>
 
-        <div id="step-4" class="step" hidden>
+        <div id="step-4" class="step" hidden style="position: absolute">
             <p>If you are done with the changes, hit save.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
@@ -70,8 +71,8 @@
         </div>
 
         <div id="step-5" class="step" hidden>
-            <p>Your company branding is now set up, <br>
-                to continue with Getting started tutorial, <br>
+            <p>Branded login for your company is now set up, <br />
+                to continue with Getting started tutorial, <br />
                 open the company menu.
             </p>
             <div class="flex-horizontal">
@@ -85,7 +86,7 @@
     <script>
         Polymer({
 
-            is: 'appsco-tutorial-company-branding',
+            is: 'appsco-tutorial-branded-login',
 
             property: {
                 page: {
@@ -110,11 +111,12 @@
             },
 
             attached: function() {
-                this.tutorialId = 'company_branding';
-                this.tutorialTitle = 'Company branding';
-                this.description = ' Upload logo and set company branding';
+                this.tutorialId = 'branded_login';
+                this.tutorialTitle = 'Branded login';
+                this.description = 'Set customized login for your company';
                 this.icon = 'icons:settings';
-                this.readme = 'https://support.appsco.com/hc/en-gb/articles/360000109512-Company-Branding';
+                this.readme = 'https://support.appsco.com/hc/en-gb/articles/360014981992-Branded-login';
+
                 this.init();
             },
 
@@ -135,17 +137,17 @@
                         }
                     },
                     step3: {
-                        reference: '* /deep/ #companySettingsBrandingCardBtn',
-                        coverTarget: '* /deep/ #companySettingsBrandingCard',
+                        reference: '* /deep/ #companySettingsBrandedLoginCardBtn',
+                        coverTarget: '* /deep/ #companySettingsBrandedLoginCard',
                         popperOptions: {
-                            placement: 'bottom'
+                            placement: 'right-start'
                         }
                     },
                     step4: {
-                        reference: '* /deep/ #companyBrandSettingsSaveBtn',
-                        coverTarget: '* /deep/ #companyBrandSettings',
+                        reference: '* /deep/ #submitBrandedLoginForm',
+                        coverTarget: '* /deep/ #brandedLoginCard',
                         popperOptions: {
-                            placement: 'left-start'
+                            placement: 'left'
                         }
                     },
                     step5: {
@@ -154,8 +156,21 @@
                         popperOptions: {
                             placement: 'right-start'
                         }
-                    },
+                    }
                 };
+            },
+
+            step3: function(index, item, doneBuildingPopperHandler) {
+                var handleFunction = function() {
+                    var element = document.querySelector('* /deep/ #appscoCompanyComponentsPage');
+                    if (!element || this.page !== 'company') {
+                        setTimeout(handleFunction, 200);
+                        return;
+                    }
+                    element.scrollTop = element.scrollHeight;
+                    this.handleStep(index, item, doneBuildingPopperHandler);
+                }.bind(this);
+                handleFunction();
             },
 
             step4: function(index, item, doneBuildingPopperHandler) {
@@ -173,6 +188,7 @@
             _nextStep: function() {
                 this.currentStep.reference.click();
             },
+
             _nextStep5: function() {
                 this.nextStep();
             }
