--- a/src/components/get-started/appsco-tutorial-add-company-user.html
+++ b/src/components/get-started/appsco-tutorial-add-company-user.html
@@ -7,7 +7,7 @@
 <script src="../../../bower_components/popper.js/dist/umd/popper.js"></script>
 <script src="../../../bower_components/popper.js/dist/umd/popper-utils.js"></script>
 
-<dom-module id="appsco-tutorial-branded-login">
+<dom-module id="appsco-tutorial-add-company-user">
     <template>
         <style>
             :host {
@@ -40,7 +40,7 @@
         </div>
 
         <div id="step-2" class="step" hidden>
-            <p>You can find the branded login options in company settings.</p>
+            <p>Go to your company's directory.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -50,8 +50,7 @@
         </div>
 
         <div id="step-3" class="step" hidden>
-            <p>To customize login form for your company<br />
-                and add your own branding go here.</p>
+            <p>To add new users to the directory, click here. </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -61,7 +60,8 @@
         </div>
 
         <div id="step-4" class="step" hidden style="position: absolute">
-            <p>If you are done with the changes, hit save.</p>
+            <p>Fill out the information about the user <br />
+                and click Add to add the user to directory.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -71,9 +71,9 @@
         </div>
 
         <div id="step-5" class="step" hidden>
-            <p>Branded login for your company is now set up, <br />
-                to continue with Getting started tutorial, <br />
-                open the company menu.
+            <p>You have now learned how to add a user to <br />
+                company directory. To continue with Getting <br />
+                started tutorial, open the company menu.
             </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
@@ -86,11 +86,17 @@
     <script>
         Polymer({
 
-            is: 'appsco-tutorial-branded-login',
+            is: 'appsco-tutorial-add-company-user',
 
             property: {
                 page: {
                     type: String
+                },
+
+                directoryPageLoaded: {
+                    type: Boolean,
+                    value: false,
+                    notify: true
                 }
             },
 
@@ -100,22 +106,17 @@
             ],
 
             pageChanged: function() {
-                if(this.page !== 'company' && this.step === 2) {
+                if(this.page !== 'directory' && this.step === 2) {
                     this.reset();
-                }
-                if(this.page === 'company' && this.step === 2) {
-                    setTimeout(function(){
-                        this.nextStep();
-                    }.bind(this), 3000);
                 }
             },
 
             attached: function() {
-                this.tutorialId = 'branded_login';
-                this.tutorialTitle = 'Branded login';
-                this.description = 'Set customized login for your company';
+                this.tutorialId = 'directory';
+                this.tutorialTitle = 'Directory';
+                this.description = 'Add company users to directory';
                 this.icon = 'icons:settings';
-                this.readme = 'https://support.appsco.com/hc/en-gb/articles/360014981992-Branded-login';
+                this.readme = 'https://support.appsco.com/hc/en-gb/sections/360002084191-Users-and-licences-';
 
                 this.init();
             },
@@ -130,24 +131,24 @@
                         }
                     },
                     step2: {
-                        reference: '* /deep/ #menuCompanySettingsText',
+                        reference: '* /deep/ #menuCompanyDirectoryText',
                         coverTarget: '* /deep/ #menuContainer',
                         popperOptions: {
                             placement: 'right-start'
                         }
                     },
                     step3: {
-                        reference: '* /deep/ #companySettingsBrandedLoginCardBtn',
-                        coverTarget: '* /deep/ #companySettingsBrandedLoginCard',
+                        reference: '* /deep/ #addAccountAction',
+                        coverTarget: '* /deep/ #addAccountAction',
                         popperOptions: {
                             placement: 'right-start'
                         }
                     },
                     step4: {
-                        reference: '* /deep/ #submitBrandedLoginForm',
-                        coverTarget: '* /deep/ #brandedLoginCard',
+                        reference: '* /deep/ #addAccountDialogButton',
+                        coverTarget: '* /deep/ #addAccountDialog',
                         popperOptions: {
-                            placement: 'left'
+                            placement: 'bottom'
                         }
                     },
                     step5: {
@@ -161,23 +162,26 @@
             },
 
             step3: function(index, item, doneBuildingPopperHandler) {
-                var handleFunction = function() {
-                    var element = document.querySelector('* /deep/ #appscoCompanyComponentsPage');
-                    if (!element || this.page !== 'company') {
+                var attempts = 0,
+                    handleFunction = function() {
+                    attempts++;
+                    if (attempts > 100) {
+                        return;
+                    }
+                    var element = document.querySelector('* /deep/ #addAccountAction');
+                    if (!element || this.page !== 'directory' || !this.directoryPageLoaded) {
                         setTimeout(handleFunction, 200);
                         return;
                     }
-                    element.scrollTop = element.scrollHeight;
                     this.handleStep(index, item, doneBuildingPopperHandler);
                 }.bind(this);
                 handleFunction();
             },
 
             step4: function(index, item, doneBuildingPopperHandler) {
-                // wait 400 msec for animation to finish
                 setTimeout(function() {
                     this.handleStep(index, item, doneBuildingPopperHandler);
-                }.bind(this), 400);
+                }.bind(this), 550);
             },
 
             start: function() {
