--- a/src/components/components/appsco-cover-behaviour.html
+++ b/src/components/components/appsco-cover-behaviour.html
@@ -9,7 +9,14 @@
 
         buildCover: function(elem, onclick) {
             var cover = document.createElement('div');
-            var rect = elem.getBoundingClientRect();
+            var rect = elem ? elem.getBoundingClientRect() : {
+                bottom: 0,
+                height: 0,
+                left: 0,
+                right: 0,
+                top: 0,
+                width: 0
+            };
             var response = "position: fixed ;z-index: 8000 ;top: 0 ;right: 0 ;bottom: 0 ;left: 0 ;background-color: rgba(0,0,0,0.5);";
 
             var topCover = document.createElement('div');
